--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,7 @@
     width: 60%;
     height: 50%;
     margin: 100px;
-
+    margin-top: 0px;
 }
 .desc-text>p>br {
     content: "";
@@ -72,7 +72,73 @@
     top: -80px;
     left: -50px;
 }
-
+/***********/
+/*colonnes*/
+/*********/
+.colon-zone {
+    z-index: 3;
+    display: flex;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: -70px;
+    justify-content: space-around;
+}
+#colon {
+    width: 8%;
+    height: 1em;
+    border: solid 0px;
+    border-radius: 0.5em; 
+    background: linear-gradient(180deg, #ADE25D, #CFFFB3);
+    transition: 1s;
+    transform: scaleY(1);
+    animation: monte 1s infinite alternate;
+}
+#colon:nth-child(1) {
+    animation-delay: 0.1s;
+}
+#colon:nth-child(2){
+    animation-delay: 0.2s;
+}
+#colon:nth-child(3){
+    animation-delay: 0.3s;
+}
+#colon:nth-child(4){
+    animation-delay: 0.4s;
+}
+#colon:nth-child(5){
+    animation-delay: 0.5s;
+}
+#colon:nth-child(6){
+    animation-delay: 0.6s;
+}
+#colon:nth-child(7){
+    animation-delay: 0.7s;
+}
+#colon:nth-child(8){
+    animation-delay: 0.8s;
+}
+#colon:nth-child(9){
+    animation-delay: 0.9s;
+}
+#colon:nth-child(10){
+    animation-delay: 1s;
+}
+#colon:nth-child(11){
+    animation-delay: 1.1s;
+}
+@keyframes monte {
+    0% {
+        transform: scaleY(1);
+    }
+    50%{
+        transform: scaleY(11);
+    }
+    100% {
+        transform: scaleY(1);
+    }
+}
 /***************************/
 /*échantillon de créations*/
 /*************************/
@@ -80,9 +146,10 @@
     margin-bottom: 50px;
 }
 .creations-container {
-        background: linear-gradient(45deg, #ADE25D, #CFFFB3);
-        padding-top: 15px;
-        padding-bottom: 50px;
+    background: linear-gradient(45deg, #ADE25D, #CFFFB3);
+    margin-top: 50px;
+    padding-top: 15px;
+    padding-bottom: 50px;
 }
 .creations>h2{
     font-size: 50px;
